# HGI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml  logger_config.py
cron/: data-pipeline-cron
pipeline/: DataIngestor.py  DataPipeline.py  DataTransformer.py  PostgresLoader.py  main.py  pipeline.py
scripts/: start.sh
